--- a/app/page1.html
+++ b/app/page1.html
@@ -1,12 +1,12 @@
 ---
-title: 首頁
+title: 內頁一
 layout: ./app/layout.ejs
 engine: ejs
 current: index
 ---
 
 <h1>
-  這是一段話
+  內頁一234
 </h1>
-<a href="page1.html">內頁一</a>
+
 <div class="box"></div>
